force-app/main/default/objects/Opportunity/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <label>Auto Renew</label>
    <description>Indicates if this opportunity should automatically renew</description>
    <inlineHelpText>Check if this contract should automatically renew</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>