force-app/main/default/objects/Opportunity/fields/Away_Score__c.field-meta.xml
<CustomField>
    <fullName>Away_Score__c</fullName>
    <label>Away Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>