force-app/main/default/objects/Opportunity/fields/Away_Sub_Score__c.field-meta.xml
<CustomField>
    <fullName>Away_Sub_Score__c</fullName>
    <description>Soccer: (Null). Cricket: Wickets (e.g., "7"). AFL: Goals.Behinds (e.g., "12.8")</description>
    <label>Away Sub Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>