force-app/main/default/objects/Opportunity/fields/Away_Team__c.field-meta.xml
<CustomField>
    <fullName>Away_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Away Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Away Fixtures</relationshipLabel>
    <relationshipName>Away_Fixtures</relationshipName>
    <type>Lookup</type>
</CustomField>