force-app/main/default/objects/Opportunity/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <label>Churn Risk</label>
    <description>Risk level for customer churn</description>
    <inlineHelpText>Select the churn risk level for this customer</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low (Green)</fullName>
                <default>true</default>
                <label>Low (Green)</label>
            </value>
            <value>
                <fullName>Medium (Yellow)</fullName>
            </value>
            <value>
                <fullName>High (Red)</fullName>
            </value>
            <value>
                <fullName>At Risk (Critical)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>