force-app/main/default/objects/Opportunity/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <label>Commission Amount</label>
    <description>Sales commission amount</description>
    <inlineHelpText>Calculated sales commission for this opportunity</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>