force-app/main/default/objects/Opportunity/fields/Current_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Period__c</fullName>
    <description>Game clock/period: "Q1", "2nd Half", "3rd Innings", "Over 14.2"</description>
    <label>Current Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>