force-app/main/default/objects/Opportunity/fields/ESPN_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_Event_ID__c</fullName>
    <externalId>true</externalId>
    <label>ESPN Event ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>