force-app/main/default/objects/Opportunity/fields/ESPN_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_ID__c</fullName>
    <description>The unique ID of the event (fixture) from the ESPN API (universal field name replacing ESPN_Event_ID__c)</description>
    <externalId>true</externalId>
    <label>ESPN ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>