force-app/main/default/objects/Opportunity/fields/Gender_Focus__c.field-meta.xml
<CustomField>
    <fullName>Gender_Focus__c</fullName>
    <label>Gender Focus</label>
    <description>Whether this opportunity focuses on Men&apos;s, Women&apos;s, or Both sports</description>
    <inlineHelpText>Select the sports gender focus for this opportunity</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men&apos;s Sports</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Sports</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>