force-app/main/default/objects/Opportunity/fields/Home_Score_Total__c.field-meta.xml
<CustomField>
    <fullName>Home_Score_Total__c</fullName>
    <description>Universal total score: Soccer: Goals, NBA: Points, Cricket: Runs, AFL: Total Points</description>
    <label>Home Score Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>