force-app/main/default/objects/Opportunity/fields/Home_Team__c.field-meta.xml
<CustomField>
    <fullName>Home_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Home Fixtures</relationshipLabel>
    <relationshipName>Home_Fixtures</relationshipName>
    <type>Lookup</type>
</CustomField>