force-app/main/default/objects/Opportunity/fields/League__c.field-meta.xml
<CustomField>
    <fullName>League__c</fullName>
    <label>League</label>
    <description>Associated league/competition for this opportunity</description>
    <inlineHelpText>Select the associated league or competition</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>