force-app/main/default/objects/Opportunity/fields/Opportunity_Group__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Group</label>
    <referenceTo>Opportunity_Group__c</referenceTo>
    <relationshipLabel>Fixtures</relationshipLabel>
    <relationshipName>Fixtures</relationshipName>
    <type>Lookup</type>
</CustomField>