force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <description>Revenue stream type for this opportunity</description>
    <inlineHelpText>Select the revenue stream type (Subscription, Sponsorship, Media Licensing, etc.)</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription - Premium ($9.99/mo)</fullName>
            </value>
            <value>
                <fullName>Subscription - Creator ($29.99/mo)</fullName>
            </value>
            <value>
                <fullName>Subscription - Team Bronze ($99/mo)</fullName>
            </value>
            <value>
                <fullName>Subscription - Team Silver ($199/mo)</fullName>
            </value>
            <value>
                <fullName>Subscription - Team Gold ($499/mo)</fullName>
            </value>
            <value>
                <fullName>Sponsorship - Title Sponsor</fullName>
            </value>
            <value>
                <fullName>Sponsorship - Category Sponsor</fullName>
            </value>
            <value>
                <fullName>Sponsorship - Event Sponsor</fullName>
            </value>
            <value>
                <fullName>Media Licensing - Content</fullName>
            </value>
            <value>
                <fullName>Media Licensing - Data</fullName>
            </value>
            <value>
                <fullName>League Partnership - Official Stats</fullName>
            </value>
            <value>
                <fullName>League Partnership - Content Provider</fullName>
            </value>
            <value>
                <fullName>API Access - Startup</fullName>
            </value>
            <value>
                <fullName>API Access - Enterprise</fullName>
            </value>
            <value>
                <fullName>Affiliate - Betting</fullName>
            </value>
            <value>
                <fullName>Strategic Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>