force-app/main/default/objects/Opportunity/fields/Partner_Commission__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission__c</fullName>
    <label>Partner Commission</label>
    <description>Affiliate partner commission amount</description>
    <inlineHelpText>Commission amount paid to affiliate partners</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>