force-app/main/default/objects/Opportunity/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <label>Renewal Date</label>
    <description>Contract renewal date</description>
    <inlineHelpText>Date when this contract is up for renewal</inlineHelpText>
    <type>Date</type>
</CustomField>