force-app/main/default/objects/Opportunity/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Universal UTC start time (replaces Match_Date__c)</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>