force-app/main/default/objects/Opportunity/fields/Stripe_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_ID__c</fullName>
    <label>Stripe Subscription ID</label>
    <description>Stripe subscription reference ID</description>
    <inlineHelpText>Stripe subscription ID for payment tracking</inlineHelpText>
    <type>Text</type>
    <length>100</length>
    <externalId>true</externalId>
</CustomField>