force-app/main/default/objects/Opportunity/fields/Subscription_Tier__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tier__c</fullName>
    <label>Subscription Tier</label>
    <description>Subscription tier level</description>
    <inlineHelpText>Select the subscription tier (Premium, Creator, Team)</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Creator</fullName>
            </value>
            <value>
                <fullName>Team Bronze</fullName>
            </value>
            <value>
                <fullName>Team Silver</fullName>
            </value>
            <value>
                <fullName>Team Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>