force-app/main/default/objects/Opportunity/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <description>Associated team for this opportunity (for team portal sales)</description>
    <inlineHelpText>Select the associated team (typically for team portal opportunities)</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Team Opportunities</relationshipLabel>
    <relationshipName>Team_Opportunities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>