force-app/main/default/objects/Opportunity/fields/Women_Content_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Women_Content_Percentage__c</fullName>
    <label>Women&apos;s Content %</label>
    <description>Percentage of women&apos;s sports content usage</description>
    <inlineHelpText>Percentage of women&apos;s sports content consumed by this customer</inlineHelpText>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>