force-app/main/default/objects/Opportunity/fields/Women_Sports_Premium__c.field-meta.xml
<CustomField>
    <fullName>Women_Sports_Premium__c</fullName>
    <label>Women&apos;s Sports Premium</label>
    <description>Percentage uplift for women&apos;s sports focus (typically 20%)</description>
    <inlineHelpText>Percentage uplift applied for women&apos;s sports focus</inlineHelpText>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>